--- a/tools/primary_deps.ini
+++ b/tools/primary_deps.ini
@@ -14,7 +14,7 @@ install_requires =
     babel
     click
     colorama
-    discord.py
+    disnake
     distro; sys_platform == "linux"
     fuzzywuzzy
     markdown
