--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
     colorama==0.4.4
     commonmark==0.9.1
     contextlib2==21.6.0
-    disnake==2.3.0
+    disnake>=2.4.0
     distro==1.6.0; sys_platform == "linux"
     fuzzywuzzy==0.18.0
     idna==3.2
